--- a/package.json
+++ b/package.json
@@ -9,8 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@mui/icons-material": "^5.11.16",
+    "@mui/material": "^5.11.16",
+    "axios": "^1.3.4",
+    "bcrypt": "^5.1.0",
+    "cookie": "^0.5.0",
+    "cookies-next": "^2.1.1",
+    "draft-js": "^0.11.7",
+    "mongoose": "^7.0.3",
     "next": "13.2.4",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-cookie": "^4.1.1",
+    "react-dom": "18.2.0",
+    "suneditor-react": "^3.4.1"
   }
 }
